--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./src/style/global.css" type="text/css" rel="stylesheet" />
     <title>SPA | Home</title>
   </head>
   <body>
-    <main id="root"></main>
+    <header id="header">
+      <h1>SPA</h1>
+    </header>
+    <main id="main"></main>
     <script src="./src/main.js" type="module"></script>
   </body>
 </html>
